adding second line into this script

--- a/site/index.HTML
+++ b/site/index.HTML
@@ -10,5 +10,6 @@
 This is another line, never too late for change
 Hi it is about changing, 
 hello and would you mind to go with me</h1>
+<h2> another commit on github<h2>
 </body>
 </html>
